--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           uv venv
           source .venv/bin/activate
           uv pip install -r pyproject.toml --extra dev
+          uv pip install -e .
 
       - name: Lint with Ruff
         run: |
